--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
     <div class="container mx-auto px-2 py-2">
       <div class="py-2 mb-2 prose">
      
-    <img src="assets\imagen-poesia-medieval_crop1.jpg" width="900"/>
+    <img src="" width="900"/>
     <!--  height="500"/> -->
     
       </div>
@@ -14,7 +14,7 @@ layout: home
       <div class="container mx-auto px-2 py-2">
         <div class="py-2 mb-2 prose">
  
-          <p class="prosa">Poesía Medieval aloja dos proyectos de investigación sobre el estudio de corpus medievales en verso desde las Humanidades Digitales: <b>Diálogo Medieval</b> (PICT 2013), edición digital de poesía medieval dialogada y <b>Reis Trobadors: reconstrucción filológico-musicológica de la lírica medieval románica con herramientas digitales</b> (Filo:CyT 2018). Poesía Medieval utiliza técnicas de Minimal Computing y estándares abiertos como los de la Text Encoding Initiative (TEI-XML) para el tratamiento y la edición de textos.</p>
+          <p class="prosa">   utiliza técnicas de Minimal Computing y estándares abiertos como los de la Text Encoding Initiative (TEI-XML) para el tratamiento y la edición de textos.</p>
  
         <!-- </div>
       </div>    
@@ -29,13 +29,7 @@ layout: home
 
           <ul>
             <li><a href="https://orcid.org/0000-0002-8997-5415" target="_blank">Gimena del Rio (HD CAICYT Lab - IIBICRIT, CONICET - UBA)</a> - Dirección</li>
-            <li>Germán Pablo Rossi (UBA) - Co-dirección</li>
-            <li><a href="https://www.conicet.gov.ar/new_scp/detalle.php?id=53027&keywords=nidia+hernandez&datos_academicos=yes" target="_blank">Nidia Hernández (HD Lab - CONICET)</a></li>
-            <li><a href="https://www.conicet.gov.ar/new_scp/detalle.php?keywords=&id=25837&datos_academicos=yes" target="_blank">Romina De Léon (HD Lab - CONICET)</a></li>
-            <li><a href="https://www.aacademica.org/gabriela.edith.striker" target="_blank">Gabriela Striker (UBA)</a></li>
-            <li><a href="https://www.aacademica.org/gabriel.calarco" target="_blank">Gabriel Calarco (UBA)</a></li>
-            <li>Eleonora Wachsmann (UBA)</li>
-            <li>Rocío Méndez (UBA)</li>
+            <li>María Agustina Ryckeboer (USal)</li>
           </ul>
 
         </div>
@@ -44,8 +38,8 @@ layout: home
         <div class="py-2 mb-2 prose">
           <p style="font-size: 22px;">Citar esta edición como:</p> 
 
-<p align="justify" style="font-size: 16px;">del Rio Riande, Gimena; Hernández, Nidia; De León, Romina; Calarco, Gabriel; Striker, Gabriela; Méndez Rocío; Rossi, Germán; Wachsmann (eds.). 
-  Reis Trobadors: reconstrucción filológico-musicológica de la lírica medieval románica con herramientas digitales. 
-  <a href="http://hdlab.space/Poesia-Medieval/" target="blank">http://hdlab.space/Poesia-Medieval/</a> [Fecha de consulta]
+<p align="justify" style="font-size: 16px;">  
+  
+  <a href="" target="blank">http://hdlab.space/</a> [Fecha de consulta]
 </div>
 </div>
